--- a/lovely.toml
+++ b/lovely.toml
@@ -1306,10 +1306,12 @@ match_indent = true
 payload = '''
 
 for k, card in ipairs(self.cards) do
-    if card.config.center.key == 'j_bunc_taped' and (card.config.center.discovered or card.bypass_discovery_center) then
-        if not card.states.drag.is then
-            card.T.x = card.T.x + (0.18 * card.T.w)
-            card.T.y = card.T.y - (0.01 * card.T.h)
+    if card.config.center then
+        if card.config.center.key == 'j_bunc_taped' and (card.config.center.discovered or card.bypass_discovery_center) then
+            if not card.states.drag.is then
+                card.T.x = card.T.x + (0.18 * card.T.w)
+                card.T.y = card.T.y - (0.01 * card.T.h)
+            end
         end
     end
 end
@@ -1589,7 +1591,7 @@ end
 '''
 
 #############################
-   # REGULAR BOSS BLINDS #
+# REGULAR BOSS BLINDS #
 #############################
 
 # G.FUNCS.discard_cards_from_highlighted() (The Paling 1/2)
@@ -1964,7 +1966,7 @@ end
 '''
 
 ##############################
-   # FINISHER BOSS BLINDS #
+# FINISHER BOSS BLINDS #
 ##############################
 
 
@@ -2409,9 +2411,6 @@ end
 '''
 
 
-
-
-
 # function card_open() (Filigree Tag)
 [[patches]]
 [patches.pattern]
@@ -2484,14 +2483,8 @@ end
 '''
 
 
-
-
-
-
-
-
 ##############################
-       # NEW VOUCHERS #
+# NEW VOUCHERS #
 ##############################
 
 # function Blind:press_play() (Hedge Trimmer)
@@ -2857,15 +2850,6 @@ end
 '''
 
 
-
-
-
-
-
-
-
-
-
 # Virtual color, part 1/2
 [[patches]]
 [patches.pattern]
@@ -2888,14 +2872,8 @@ payload = '''bunco_virtual = G.C.BUNCO_VIRTUAL,
 bunco_virtual_dark = G.C.BUNCO_VIRTUAL_DARK,'''
 
 
-
-
-
-
-
-
 ##############################
-    # NEW JOKER STICKERS #
+# NEW JOKER STICKERS #
 ##############################
 
 # Scattering Sticker 1/2
@@ -3016,12 +2994,8 @@ payload = '''
 '''
 
 
-
-
-
-
 ##############################
-     # NEW ENHANCEMENTS #
+# NEW ENHANCEMENTS #
 ##############################
 
 # Cracker Cards 1/3
@@ -3139,12 +3113,6 @@ calculate_cracker_cards({full_hand = G.play.cards, scoring_hand = scoring_hand, 
 '''
 
 
-
-
-
-
-
-
 # # Money gain effects
 # [[patches]]
 # [patches.pattern]
@@ -3247,9 +3215,6 @@ payload = '''end
 '''
 
 
-
-
-
 # Drawstep bypassing
 [[patches]]
 [patches.pattern]
@@ -3258,10 +3223,6 @@ pattern = '''if SMODS.DrawSteps[k]:check_conditions(self, layer) then SMODS.Draw
 position = 'at'
 match_indent = true
 payload = '''if SMODS.DrawSteps[k]:check_conditions(self, layer) and not (self.draw_bypass and self.draw_bypass[k]) then SMODS.DrawSteps[k].func(self, layer) end'''
-
-
-
-
 
 
 # Fix Gameplan messing with hand size too much
